<resources>
    <string name="app_name">FirstHacaton</string>
    <string name="choose_action">Выберите действие</string>
    <string name="catalog_title">Каталог</string>
    <string name="chat_title">Чаты</string>
    <string name="camps_on_map_title">Лагеря</string>
    <string name="my_account_title">ЛК</string>
    <string name="text_sign_in_google">Войти с помощью Google</string>
    <string name="sing_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="without_sign_up">Хочу продолжить без регистрации</string>
    <string name="sign_in_text">Авторизация</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="password_conf_hint">Подтвердите пароль</string>
    <string name="first_name_hint">Имя</string>
    <string name="last_name_hint">Фамилия</string>
    <string name="middle_name_hint">Отчество</string>
    <string name="sign_up_text">Регистрация</string>
    <string name="sign_up_btn">Зарегистрироваться</string>
    <string name="sign_up_error_password">Введенные пароли не совпадают</string>
    <string name="coast">Цена</string>
    <string name="rate">Очень здорово! Ребенку понравилось, хорошая атмосфера и интересная программа!!!</string>
    <string name="make_rate">Оставить отзыв</string>
    <string name="Bron">Забронировать</string>
    <string name="call">Связаться</string>
    <string name="role_parent">Родитель</string>
    <string name="sign_up_successfully">Регистрация завершена. На вашу почту отправлено письмо с подтверждением.</string>
    <string name="error_sign_in">Неверный логин или пароль</string>
    <string name="error_empty_fields">Оба поля должны быть заполнены</string>
    <string name="account_not_found">Аккаунт не зарегистрирован</string>
    <string name="btn_text_calls">Поданные заявки</string>
    <string name="unknown_account">Здесь будут отображаться все заполненные данные после регистрации</string>
    <string name="message">Чаты и возможность писать сообщения доступны после регистрации</string>
    <string name="go_to_sign_up">Перейти к регистрации</string>
</resources>